--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,8 @@
 Source: ntpsec
 Section: net
 Priority: optional
-Maintainer: Richard Laager <rlaager@debian.org>
+Maintainer: Pexip AS <packaging@pexip.com>
+XSBC-Pexip-Original-Maintainer: Richard Laager <rlaager@debian.org>
 Build-Depends: asciidoctor,
                bison,
                debhelper-compat (= 13),
@@ -29,6 +30,7 @@ Rules-Requires-Root: no
 Vcs-Browser: https://salsa.debian.org/debian/ntpsec
 Vcs-Git: https://salsa.debian.org/debian/ntpsec.git
 Homepage: https://www.ntpsec.org
+XS-Pexip-Upstream: http://ftp.debian.org/debian/ bookworm
 
 Package: ntpsec
 Architecture: any
