Build-Depend on OpenSSL 3

--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Build-Depends: asciidoctor,
                docbook-xsl,
                libbsd-dev,
                libcap2-dev [linux-any],
-               libssl-dev,
+               libssl-dev (>= 3),
                netbase,
                pkg-config,
                pps-tools [linux-any],
