--- a/debian/ntp.conf
+++ b/debian/ntp.conf
@@ -31,10 +31,10 @@ tos minclock 4 minsane 3
 # pool.ntp.org maps to about 1000 low-stratum NTP servers.  Your server will
 # pick a different set every time it starts up.  Please consider joining the
 # pool: <https://www.pool.ntp.org/join.html>
-pool 0.debian.pool.ntp.org iburst
-pool 1.debian.pool.ntp.org iburst
-pool 2.debian.pool.ntp.org iburst
-pool 3.debian.pool.ntp.org iburst
+pool 0.pexip.pool.ntp.org iburst
+pool 1.pexip.pool.ntp.org iburst
+pool 2.pexip.pool.ntp.org iburst
+pool 3.pexip.pool.ntp.org iburst
 
 # Access control configuration; see /usr/share/doc/ntpsec-doc/html/accopt.html
 # for details.
